feat:个人记录页面顶部背景图可选

--- a/大学生自我管理APP-02/index.html
+++ b/大学生自我管理APP-02/index.html
@@ -10,6 +10,8 @@
         (coverSupport ? ', viewport-fit=cover' : '') + '" />')
     </script>
     <title></title>
+	<style>
+	</style>
     <!--preload-links-->
     <!--app-context-->
   </head>
